css/screen.css
* {
  border: none;
  border-radius: 0;
  box-sizing: border-box;
  color: inherit;
  font-family: inherit;
  margin: 0;
}

html {
  background-attachment: fixed;
  background-image: url('/img/bg.jpg');
  background-position: 50%;
  background-size: cover;
  overflow: auto scroll;
  scrollbar-color: dimgray rgba(0, 0, 0, .89);

  line-height: 1.4;
  margin: 0;
  padding: 0;
}

body {
  background: rgba(0, 0, 0, .89);
  border-bottom: .25em solid gold;
  color: ivory;
  min-height: 100vh;
  margin: 0;
  padding: 0;
}

main {
  padding: 1em 1em 4em;
  margin: 0 auto;
  max-width: 37em;
}
main.blur {
  opacity: .38;
  pointer-events: none;
  -moz-user-select: none;
  user-select: none;
}

main > * + * {
  margin-top: 2em;
}

main > h1 {
  font-size: 2em;
}
main > h1, dialog h1 {
  margin-top: 0;
  text-align: right;
}

main > article {
  min-height: 7em;
}

#alerts, dialog.popup {
  position: fixed;
  top: 0;
  max-width: 27em;
  width: 85vw;
}
dialog {
  background: black;
  border: 1px solid;
  margin-top: 1em;
}
dialog:first-of-type {
  margin-top: 2em;
}

dialog.popup {
  margin-left: auto;
  margin-right: auto;
}
dialog aside > * + * {
  margin-top: 1em;
}
dialog .actions {
  text-align: right;
}
dialog .actions > * + * {
  margin-left: .2em;
}

dialog.alert {
  background: dimgray;
  display: block;
  font-variant: small-caps;
  margin-left: 1em;
  padding: .5em 1em;
  position: static;
  width: -moz-fit-content;
  width: fit-content;
}
dialog.error, button.danger:hover {
  background: #ff0051;
  color: white;
}
dialog.success {
  background: #00a2ff;
  color: white;
}
dialog.warn {
  background: gold;
  color: white;
}

h1, h2, h3, h4, strong, em, a {
  color: white;
}

h1 {
  font-variant: small-caps;
}

a:hover {
  text-decoration: underline double gold;
}

hr {
  border: none;
  border-top: dotted;
  color: inherit;
  margin: 2em 0;
}

ul {
  list-style: none;
  padding: 0;
}
ul > li:before {
  content: '· ';
}
ul.drafts:empty::before {
  content: 'No drafts here';
  font-style: italic;
}

time {
  font-size: .8em;
}

fieldset, nav {
  border: 1px solid;
  display: inline-block;
  margin: 0 .5em .5em 0;
  padding: 0;
}
fieldset > *,
nav > * {
  float: left;
}
fieldset > * + *,
nav > * + * {
  border-left: 1px dotted;
}
fieldset {
  font-size: .8em;
}

button, input, label, select {
  font-size: inherit;
  line-height: inherit;
  height: 1.8em;
  padding: .15em .5em;
}
button, label, select {
  background: dimgray;
  color: ivory;
  cursor: pointer;
  font-variant: small-caps;
  text-decoration: none;
  -moz-user-select: none;
  user-select: none;
}
button:disabled, select:disabled {
  border-color: ivory;
  color: darkgray;
}
button:hover {
  background: gold;
}
button:disabled:hover {
  background: dimgray;
}
button.cancel {
  background: black;
}
button.cancel:hover {
  background: ivory;
  color: black;
}

input {
  background: transparent;
}
input:focus {
  background: dimgray;
}

label.extension, select.extension {
  font-variant: normal;
}

:disabled, .disabled {
  cursor: default;
}

/***/

body {
  --ck-border-radius: 0;
  --ck-color-focus-border: gold;
  --ck-color-focus-outer-shadow: none;
  --ck-color-focus-inner-shadow: none;
  --ck-color-text: ivory;
  --ck-color-toolbar-background: black;
  --ck-color-toolbar-border: ivory;
  --ck-color-button-default-hover-background: gold;
  --ck-color-button-on-background: dimgray;
  --ck-color-button-on-hover-background: darkgray;
  --ck-color-dropdown-panel-background: black;
  --ck-color-input-background: black;
  --ck-color-list-background: black;
  --ck-color-list-button-hover-background: gold;
  --ck-color-list-button-on-background: dimgray;
  --ck-color-list-button-on-background-focus: gold;
  --ck-color-panel-background: black;
  --ck-color-panel-border: ivory;
  --ck-color-link-default: white;
  --ck-color-link-selected-background: gold;
  --ck-focus-inner-shadow: none;
  --ck-focus-outer-shadow: none;
  --ck-focus-ring: 1px solid ivory;
}

article.ck-content blockquote {
  border-left-color: gold;
  font-style: normal;
}
article.ck-focused {
  background: black;
}

.ck-balloon-panel {
  transform: translate(-1em, 1em);
}

